<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/x_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:text="@string/x"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/x_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/x_label"
        android:layout_alignBottom="@+id/x_label"
        android:layout_toRightOf="@+id/x_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/y_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/x_label"
        android:layout_toLeftOf="@+id/x_value"
        android:text="@string/y"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/y_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/y_label"
        android:layout_alignBottom="@+id/y_label"
        android:layout_alignLeft="@+id/x_value"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/z_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/y_label"
        android:layout_toLeftOf="@+id/x_value"
        android:text="@string/z"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/z_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/z_label"
        android:layout_alignBottom="@+id/z_label"
        android:layout_alignLeft="@+id/x_value"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lat_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lat_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lat_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/z_label"
        android:text="@string/lat"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lng_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lng_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lng_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lat_value"
        android:text="@string/lng"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>